--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "bootstrap": "4.5.3",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "vue": "2.7.14",
+    "vue-axios": "^3.5.2",
     "vue-router": "^3.5.1",
+    "vuelidate": "^0.7.7",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
